src/objects/Dettaglio_Contestazione__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Dettagli Contestazione</relationshipLabel>
        <relationshipName>Dettagli_Contestazione</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codice_Unieuro__c</fullName>
        <label>Codice Unieuro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contestazione__c</fullName>
        <formula>Case__r.Id</formula>
        <label>Contestazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precodice__c</fullName>
        <label>Precodice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prodotto__c</fullName>
        <formula>Product__r.Name</formula>
        <label>Prodotto</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Dettagli Contestazione</relationshipLabel>
        <relationshipName>Dettagli_Contestazione</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantit__c</fullName>
        <label>Quantità</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dettaglio Contestazione</label>
    <nameField>
        <label>Dettaglio Contestazione Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dettagli Contestazione</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>